@@ -90,7 +90,7 @@ public class OcTreeBasicsAnchorPaneController extends REABasicUIController
       @Override
       public Number interpret(Integer newValue)
       {
-         return new Double(newValue.doubleValue());
+         return Double.valueOf(newValue.doubleValue());
       }
    };
 
@@ -105,7 +105,7 @@ public class OcTreeBasicsAnchorPaneController extends REABasicUIController
       @Override
       public Number interpret(Double newValue)
       {
-         return new Double(newValue.doubleValue());
+         return Double.valueOf(newValue.doubleValue());
       }
    };
 
